--- a/examples/ipynb/3_1_verify_quantum_program.ipynb
+++ b/examples/ipynb/3_1_verify_quantum_program.ipynb
@@ -93,23 +93,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 27.68it/s]\n",
-      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 16.63it/s]\n",
+      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 418.19it/s]\n",
+      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 168.24it/s]\n",
       "producing output states:   0%|          | 0/8 [00:00<?, ?it/s]/Users/chutianyao/anaconda3/envs/janusq/lib/python3.10/site-packages/pennylane/_qubit_device.py:653: UserWarning: Requested state or density matrix with finite shots; the returned state information is analytic and is unaffected by sampling. To silence this warning, set shots=None on the device.\n",
       "  warnings.warn(\n",
-      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 21.24it/s]\n",
-      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 75.15it/s]\n",
-      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 25.78it/s]\n",
-      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 19.24it/s]\n",
-      "sgd optimizing: 100%|██████████| 1000/1000 [15:19<00:00,  1.09it/s, loss=51.8218, min_loss=51.8218]     \n"
+      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 250.48it/s]\n",
+      "producing input circuits for random sampling: 100%|██████████| 8/8 [00:00<00:00, 564.18it/s]\n",
+      "producing input states for random sampling: 100%|██████████| 8/8 [00:00<00:00, 196.57it/s]\n",
+      "producing output states: 100%|██████████| 8/8 [00:00<00:00, 91.73it/s]\n",
+      "sgd optimizing converge:  50%|█████     | 504/1000 [02:03<02:01,  4.07it/s, loss=32.326332, min_loss=29.750893]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'assume': [([0], IsPure, ()), ([0], Equal, (0.4,)), ([1], IsPure, ()), ([2], IsPure, ()), ([0, 2], Equal, ())], 'gurrantee': [([1, 2], Equal, ()), ([0, 1], NotEqual, ())], 'verify': {'optimal_input_state': Array([ 0.31564528+0.23546517j, -0.37839434+0.5465096j ,\n",
-      "       -0.18528774+0.3119534j ,  0.49633217-0.14578386j], dtype=complex64), 'optimal_gurrantee_value': Array(0.32781845, dtype=float32), 'is_assume_satisfied': [Array(0.38241148, dtype=float32), Array(48.011234, dtype=float32), Array(0.33951998, dtype=float32), Array(0.23542643, dtype=float32), Array(0.31035656, dtype=float32), Array(0.6224472, dtype=float32), Array(0.32781845, dtype=float32)]}}\n"
+      "{'assume': [([0], IsPure, ()), ([0], Equal, (0.4,)), ([1], IsPure, ()), ([2], IsPure, ()), ([0, 2], Equal, ())], 'gurrantee': [([1, 2], Equal, ()), ([0, 1], NotEqual, ())], 'verify': {'optimal_input_state': Array([-0.56040865-0.17974281j,  0.0841108 -0.6066261j ,\n",
+      "       -0.11731254-0.40672597j, -0.0988518 +0.29853615j], dtype=complex64), 'optimal_gurrantee_value': Array(0.30231148, dtype=float32), 'is_assume_satisfied': [Array(0.04810691, dtype=float32), Array(27.236969, dtype=float32), Array(0.04923344, dtype=float32), Array(0.14673471, dtype=float32), Array(0.3957154, dtype=float32), Array(0.7049782, dtype=float32), Array(0.30231148, dtype=float32)]}}\n"
      ]
     }
    ],
