--- a/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
+++ b/examples/ipynb/5_1_solve_sat_domain_problem.ipynb
@@ -79,19 +79,19 @@
      "data": {
       "text/plain": [
        "{'restarts': 1,\n",
-       " 'conflicts': 21,\n",
-       " 'conflict cost': 0.182,\n",
-       " 'decisions': 1,\n",
-       " 'decisions cost': 0.03,\n",
-       " 'propagations': 729,\n",
-       " 'propagations cost': 0.576,\n",
-       " 'conflict literals': 201,\n",
-       " 'actual CPU time': 2.45726,\n",
-       " 'solving time': 1.939,\n",
-       " 'annealing time': 0.78,\n",
-       " 'simulation time': 3.99217,\n",
-       " 'quantum success number': 9,\n",
-       " 'quantum conflict number': 30,\n",
+       " 'conflicts': 20,\n",
+       " 'conflict cost': 0.18,\n",
+       " 'decisions': 5,\n",
+       " 'decisions cost': 0.083,\n",
+       " 'propagations': 621,\n",
+       " 'propagations cost': 0.579,\n",
+       " 'conflict literals': 145,\n",
+       " 'actual CPU time': 3.11324,\n",
+       " 'solving time': 2.991,\n",
+       " 'annealing time': 0.8,\n",
+       " 'simulation time': 2.75116,\n",
+       " 'quantum success number': 17,\n",
+       " 'quantum conflict number': 23,\n",
        " 'quantum one time solve number': 0,\n",
        " 'is satisfiable': True,\n",
        " 'is sat': True}"
@@ -133,14 +133,14 @@
       "text/plain": [
        "{'restarts': 3,\n",
        " 'conflicts': 384,\n",
-       " 'conflict cost': 2.075,\n",
+       " 'conflict cost': 2.172,\n",
        " 'decisions': 463,\n",
-       " 'decisions cost': 0.378,\n",
+       " 'decisions cost': 0.316,\n",
        " 'propagations': 9130,\n",
-       " 'propagations cost': 6.288,\n",
+       " 'propagations cost': 4.602,\n",
        " 'conflict literals': 2416,\n",
-       " 'actual CPU time': 0.028054,\n",
-       " 'solving time': 10.143,\n",
+       " 'actual CPU time': 0.028189,\n",
+       " 'solving time': 8.487,\n",
        " 'annealing time': 0.0,\n",
        " 'simulation time': 0.0,\n",
        " 'quantum success number': 0,\n",
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 141, 'minisat': 1383}, 'conflict cost': {'janus': 0.9690000000000002, 'minisat': 7.191}, 'decisions': {'janus': 35, 'minisat': 1814}, 'decisions cost': {'janus': 0.4910000000000001, 'minisat': 1.3109999999999997}, 'propagations': {'janus': 4358, 'minisat': 32252}, 'propagations cost': {'janus': 3.3280000000000003, 'minisat': 15.874999999999998}, 'conflict literals': {'janus': 849, 'minisat': 8726}, 'actual CPU time': {'janus': 23.357300000000002, 'minisat': 0.19865899999999997}, 'solving time': {'janus': 14.857, 'minisat': 29.421999999999997}, 'annealing time': {'janus': 6.820000000000001, 'minisat': 0.0}, 'simulation time': {'janus': 33.625209999999996, 'minisat': 0.0}, 'quantum success number': {'janus': 131, 'minisat': 0}, 'quantum conflict number': {'janus': 210, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
+      "{'restarts': {'janus': 12, 'minisat': 19}, 'conflicts': {'janus': 119, 'minisat': 1383}, 'conflict cost': {'janus': 19.314000000000007, 'minisat': 8.171}, 'decisions': {'janus': 27, 'minisat': 1814}, 'decisions cost': {'janus': 0.24800000000000003, 'minisat': 1.432}, 'propagations': {'janus': 3882, 'minisat': 32252}, 'propagations cost': {'janus': 4.647, 'minisat': 18.896}, 'conflict literals': {'janus': 714, 'minisat': 8726}, 'actual CPU time': {'janus': 30.217620000000004, 'minisat': 0.211897}, 'solving time': {'janus': 33.995, 'minisat': 34.318000000000005}, 'annealing time': {'janus': 5.400000000000001, 'minisat': 0.0}, 'simulation time': {'janus': 29.06324, 'minisat': 0.0}, 'quantum success number': {'janus': 116, 'minisat': 0}, 'quantum conflict number': {'janus': 154, 'minisat': 0}, 'quantum one time solve number': {'janus': 0, 'minisat': 0}, 'is satisfiable': {'janus': 12, 'minisat': 12}, 'is sat': {'janus': 12, 'minisat': 12}}\n"
      ]
     }
    ],
@@ -240,19 +240,19 @@
        "    <tr>\n",
        "      <th>janus</th>\n",
        "      <td>12</td>\n",
-       "      <td>141</td>\n",
-       "      <td>0.969</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0.491</td>\n",
-       "      <td>4358</td>\n",
-       "      <td>3.328</td>\n",
-       "      <td>849</td>\n",
-       "      <td>23.357300</td>\n",
-       "      <td>14.857</td>\n",
-       "      <td>6.82</td>\n",
-       "      <td>33.62521</td>\n",
-       "      <td>131</td>\n",
-       "      <td>210</td>\n",
+       "      <td>119</td>\n",
+       "      <td>19.314</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.248</td>\n",
+       "      <td>3882</td>\n",
+       "      <td>4.647</td>\n",
+       "      <td>714</td>\n",
+       "      <td>30.217620</td>\n",
+       "      <td>33.995</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>29.06324</td>\n",
+       "      <td>116</td>\n",
+       "      <td>154</td>\n",
        "      <td>0</td>\n",
        "      <td>12</td>\n",
        "      <td>12</td>\n",
@@ -261,15 +261,15 @@
        "      <th>minisat</th>\n",
        "      <td>19</td>\n",
        "      <td>1383</td>\n",
-       "      <td>7.191</td>\n",
+       "      <td>8.171</td>\n",
        "      <td>1814</td>\n",
-       "      <td>1.311</td>\n",
+       "      <td>1.432</td>\n",
        "      <td>32252</td>\n",
-       "      <td>15.875</td>\n",
+       "      <td>18.896</td>\n",
        "      <td>8726</td>\n",
-       "      <td>0.198659</td>\n",
-       "      <td>29.422</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.211897</td>\n",
+       "      <td>34.318</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -283,19 +283,19 @@
       ],
       "text/plain": [
        "         restarts  conflicts  conflict cost  decisions  decisions cost  \\\n",
-       "janus          12        141          0.969         35           0.491   \n",
-       "minisat        19       1383          7.191       1814           1.311   \n",
+       "janus          12        119         19.314         27           0.248   \n",
+       "minisat        19       1383          8.171       1814           1.432   \n",
        "\n",
        "         propagations  propagations cost  conflict literals  actual CPU time  \\\n",
-       "janus            4358              3.328                849        23.357300   \n",
-       "minisat         32252             15.875               8726         0.198659   \n",
+       "janus            3882              4.647                714        30.217620   \n",
+       "minisat         32252             18.896               8726         0.211897   \n",
        "\n",
        "         solving time  annealing time  simulation time  \\\n",
-       "janus          14.857            6.82         33.62521   \n",
-       "minisat        29.422            0.00          0.00000   \n",
+       "janus          33.995             5.4         29.06324   \n",
+       "minisat        34.318             0.0          0.00000   \n",
        "\n",
        "         quantum success number  quantum conflict number  \\\n",
-       "janus                       131                      210   \n",
+       "janus                       116                      154   \n",
        "minisat                       0                        0   \n",
        "\n",
        "         quantum one time solve number  is satisfiable  is sat  \n",
