--- a/examples/ipynb/3_1_verify_quantum_program.ipynb
+++ b/examples/ipynb/3_1_verify_quantum_program.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -119,10 +119,10 @@
     "with MorphQC(config=myconfig) as morphQC:\n",
     "    ### morphQC is a quantum circuit, the gate is applyed to the qubits in the order of the list\n",
     "    ## we can add tracepoint to label the quantum state\n",
-    "    morphQC.add_tracepoint(0,1) ## the state after the first 3 qubits is labeled as tracepoint 0\n",
+    "    morphQC.add_tracepoint(0,1) ## the state after the first 2 qubits is labeled as tracepoint 0\n",
     "    morphQC.assume(0,IsPure()) ## the state in tracepoint 0 is assumed to be pure\n",
-    "    morphQC.assume(0,Equal(Expectation(pauliX@pauliY)),0.4)\n",
-    "    morphQC.x([1,3]) ## apply x gate to  qubit 1 and 3\n",
+    "    morphQC.assume(0,Equal(Expectation(pauliX@pauliY)),0.4) ## the state in tracepoint 0 is assumed to have the expectation value of pauliX@pauliY to be 0.4\n",
+    "    morphQC.x([1,3]) ## apply x gate to qubit 1 and 3\n",
     "    morphQC.y([0,1,2])  ## apply y gate to qubit 0,1,2\n",
     "    for i in range(4):\n",
     "        morphQC.cnot([i, i+1]) ## apply cnot gate to qubit i and i+1\n",
@@ -137,7 +137,7 @@
     "    morphQC.assume(2,IsPure()) ## the state in tracepoint 2 is assumed to be pure\n",
     "    morphQC.assume([0,2],Equal(Expectation(pauliX@pauliY)),)\n",
     "    morphQC.guarantee([1,2],Equal()) ## the state in tracepoint 1 and 2 are guaranteed to be equal\n",
-    "    morphQC.guarantee([0,1],NotEqual()) ## the state in tracepoint 0,1 and 2 are guaranteed to be different\n",
+    "    morphQC.guarantee([0,1],NotEqual()) ## the state in tracepoint 0 and 1 are guaranteed to be different\n",
     "print(morphQC.assertion) ## print the assertion statement and verify result\n"
    ]
   }
